Add vehicle category and removing locations from company
